# BluePad

./: .editorconfig  .gitignore  AGENTS.md  LICENCE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  stability_config.conf
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: android.yaml  windows.yml
.run/: androidApp.run.xml  desktopRun.run.xml  desktopRunDist.run.xml  desktopRunReleaseDist.run.xml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/sam/bluepad/: BluePadApp.kt  MainActivity.kt
androidApp/src/main/res/drawable/: ic_launcher_foreground.xml
build-logic/: settings.gradle.kts
build-logic/plugins/: build.gradle.kts  windows_native_build.md
composeApp/: build.gradle.kts
composeApp/schemas/com.sam.bluepad.data.database.BluePadDB/: 1.json  2.json  3.json
composeApp/src/androidDeviceTest/kotlin/com/sam/bluepad/: BluePadTestApplication.kt  InstrumentTestRunner.kt
composeApp/src/androidDeviceTest/kotlin/com/sam/bluepad/di/: platformTestModule.android.kt
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/kotlin/com/sam/bluepad/: BluePadApp.kt  MainActivity.kt
composeApp/src/androidMain/kotlin/com/sam/bluepad/di/: createPlatformModule.android.kt
composeApp/src/androidMain/kotlin/com/sam/bluepad/theme/: Theme.android.kt  Typography.android.kt
composeApp/src/androidMain/res/values/: colors.xml  strings.xml
composeApp/src/androidMain/res/values-night/: colors.xml
composeApp/src/commonMain/composeResources/drawable/: ic_add.xml  ic_antenna.xml  ic_antenna_2.xml  ic_arrow_direction_receieve.xml  ic_arrow_direction_send.xml  ic_back.xml  ic_basic_diff.xml  ic_bt_not_enabled.xml  ic_cancel.xml  ic_connection_cable.xml  ic_copy.xml  ic_device_connecting.xml  ic_device_filled.xml  ic_device_outlined.xml  ic_device_success.xml  ic_devices_alternate.xml  ic_disconnected.xml  ic_discovery_timeout.xml  ic_double_tick.xml  ic_edit_pen.xml  ic_empty_box.xml  ic_expanded_list.xml  ic_file_not_found.xml  ic_menu_close.xml  ic_no_devices.xml  ic_note_filled.xml  ic_note_outlined.xml  ic_os_android.xml  ic_os_mac.xml  ic_os_unknown.xml  ic_os_windows.xml  ic_paint_brush.xml  ic_receive.xml  ic_receiver_action_reset.xml  ic_refresh.xml  ic_running.xml  ic_running_simple.xml  ic_settings_filled.xml  ic_settings_outlined.xml  ic_share.xml  (+8 more)
composeApp/src/commonMain/composeResources/values/: strings.xml
composeApp/src/commonMain/kotlin/com/sam/bluepad/: App.kt  AppCommonViewModel.kt
composeApp/src/commonMain/kotlin/com/sam/bluepad/di/: commonAppModule.kt  createPlatformModule.kt  viewModelModule.kt
composeApp/src/commonMain/kotlin/com/sam/bluepad/theme/: Color.kt  Dimensions.kt  Shapes.kt  Theme.kt  Type.kt  Typography.kt
composeApp/src/commonMain/proto/: AppUserSettings.proto
composeApp/src/commonTest/kotlin/com/sam/bluepad/di/: DIModuleTest.kt  platformTestModule.kt  testModule.kt
composeApp/src/commonTest/kotlin/com/sam/bluepad/utils/: TestDispatcherRule.kt
composeApp/src/jvmMain/kotlin/com/sam/bluepad/: main.kt
composeApp/src/jvmMain/kotlin/com/sam/bluepad/theme/: Theme.jvm.kt  (+1 more)
composeApp/src/jvmMain/resources/desktopResources/values/: strings.xml
composeApp/src/main/res/values/: ic_launcher_background.xml  themes.xml
composeApp/src/main/res/values-v31/: colors.xml
composeApp/src/main/res/values-v33/: themes.xml
cpp/: .clang-format  .gitignore
cpp/linux/: CMakeLists.txt
cpp/linux/bt_common/: CMakeLists.txt
cpp/linux/bt_common/include/: bt_bond_manager.h  bt_common_c.h  bt_common_defination.h  bt_common_utils.h  bt_connection.h  bt_enums.h  custom_bluez.h
cpp/linux/bt_common/src/: bt_bond_manager.cpp  bt_common_c.cpp  bt_common_utils.cpp  bt_connection.cpp  custom_bluez.cpp
cpp/linux/bt_common/tests/: bt_connection_test.cpp
cpp/windows/: .clang-format  CMakeLists.txt  README.md
cpp/windows/advertise/: CMakeLists.txt
cpp/windows/advertise/include/: ble_advertise_c_api.h  ble_advertiser.h  ble_models.h  library.h  utils.h
cpp/windows/advertise/src/: ble_advertise_c_api.cpp  ble_advertiser.cpp  library.cpp  utils.cpp
cpp/windows/advertise/tests/: tests.cpp
cpp/windows/bt_common/: CMakeLists.txt
cpp/windows/bt_common/include/: bluetooth_bond_manager.h  bluetooth_caller.h  bluetooth_enums.h  bt_common.h  bt_common_c_api.h  bt_common_definition.h  utils.h
cpp/windows/bt_common/src/: bluetooth_bond_manager.cpp  bluetooth_caller.cpp  bt_common.cpp  bt_common_c_api.cpp  utils.cpp
cpp/windows/bt_common/tests/: test.cpp
desktopApp/: .gitignore  build.gradle.kts  packaging.properties  proguard-rules.pro
desktopApp/desktopResources/macos/: entitlements.plist  runtime-entitlements.plist
desktopApp/desktopResources/macos/icons/BluePad.icon/: icon.json
desktopApp/packaging/macos/: app_images.sh  entitlements.plist
desktopApp/packaging/macos/icons/: BluePad.icns
desktopApp/packaging/macos/icons/BluePad.icon/: icon.json
desktopApp/packaging/windows/: appx_images.bat  appx_images.sh
desktopApp/packaging/windows/nsis/: packaging_install.nsh
desktopApp/src/main/kotlin/com/sam/bluepad/: TimestampMessageWritter.kt  main.kt
desktopApp/src/test/kotlin/com/sam/bluepad/: IsDesktopAppRunnableTest.kt
desktopApp/utilities/: generate-icon.sh
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
jvm-core/ble-advertise/: build.gradle.kts
jvm-core/ble-advertise/src/nativeInterop/cinterop/: macos_ble_advertise.def  windows_ble_advertise.def
jvm-core/ble-common/: build.gradle.kts
jvm-core/bt-common/: build.gradle.kts
jvm-core/bt-common/src/nativeInterop/cinterop/: linux_bt_common.def  windows_bt_common.def
jvm-core/common-utility/: build.gradle.kts
jvm-core/crypto-bridge/: build.gradle.kts
jvm-core/crypto-bridge/src/nativeInterop/cinterop/: linux_libsecret.def  macos_keychain.def  windows_dpapi.def
jvm-core/simplejavable/: README.md  build.gradle.kts
jvm-core/simplejavable/src/main/java/org/simplejavable/: Adapter.java  Peripheral.java
(+480 files in other folders)
